# network-audio-controller

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENCE  Makefile  README.md  dante.py  dante_controller.py  network_audio_controller.py  pylintrc  pyproject.toml  requirements.in  requirements.txt
aur/netaudio/: PKGBUILD
aur/netaudio-git/: PKGBUILD
aur/python-netaudio/: PKGBUILD
aur/python-netaudio-git/: PKGBUILD
aur/python-netaudio-lib/: PKGBUILD
dante/: __init__.py  browser.py  channel.py  control.py  device.py  multicast.py
demo/: demo.cast  demo.zsh
netaudio/: __init__.py  __main__.py  version.py
netaudio/common/: app_config.py  mdns_cache.py
netaudio/console/: __init__.py  application.py
netaudio/console/commands/: __init__.py  _utils.py  device.py  list.py
netaudio/console/commands/channel/: __init__.py  _list.py  list.py
netaudio/console/commands/config/: __init__.py
netaudio/console/commands/device/: __init__.py  _list.py  list.py
netaudio/console/commands/server/: __init__.py  _http.py  _mdns.py
netaudio/console/commands/subscription/: __init__.py  _add.py  _list.py  _remove.py  add.py  list.py
netaudio/dante/: browser.py  channel.py  channel_helper.py  command.py  command_builder.py  const.py  control.py  device.py  multicast.py  socket_manager.py  subscription.py  subscription_status.py
netaudio/dante2/: __init__.py  application.py  arc_service.py  channel.py  cmc_service.py  dbc_service.py  device.py  discovery.py  events.py  metering_service.py  notification_service.py  service.py  settings_service.py  subscription.py  util.py  volume_service.py
netaudio/utils/: timeout.py
systemd/: netaudio.service
tests/: conftest.py  test_aes67.py  test_application.py  test_dante_protocol.py  test_device_get_channel_count_command.py  test_device_get_name_command.py  test_device_get_receivers_command.py  test_device_parser.py  test_events.py  test_mdns_cache.py  test_packet_store.py  test_preferred_leader.py  test_protocol_verifier.py  test_service.py  test_services.py  test_set_latency.py  test_subscription_protocol.py  test_transport.py  test_tshark_capture.py
tests/fixtures/: label_provenance_overrides.json
tests/fixtures/provenance/: dc_preset_experiment_2026_03_30.xml  facts.json  labels.json
tests/fixtures/provenance/bugs/: conmon_query_batch_architecture.json  daemon_multiple_instances.json  device_list_channel_count.json
