[project]
name = "netaudio-workspace"
version = "0.0.0"
requires-python = ">=3.9"

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv]
managed = true
package = false

[tool.uv.sources]
netaudio-lib = { workspace = true }
netaudio = { workspace = true }

[dependency-groups]
dev = [
    "netaudio-lib",
    "netaudio",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E402", "E501", "E713", "F401", "F541", "F602", "F811", "F821", "F841", "I001", "W291"]

[tool.ruff.format]
quote-style = "double"
