[project]
name = "netaudio"
version = "0.2.3"
description = "CLI for managing network audio devices"
readme = "README.md"
license = "Unlicense"
requires-python = ">=3.9"
authors = [{ name = "Christopher Ritsen", email = "chris.ritsen@gmail.com" }]
keywords = ["audinate", "audio", "cli", "dante", "network"]
dependencies = [
    "zeroconf>=0.38.3",
    "ifaddr>=0.2.0",
    "sqlitedict>=1.7.0",
    "typer>=0.15.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "pynacl>=1.5.0",
    "tomli>=1.0.0; python_version < '3.11'",
]

[project.optional-dependencies]
capture = ["redis>=5.0.0"]
dbus = ["dbus-fast>=2.0.0"]

[project.scripts]
netaudio = "netaudio.cli:main"

[project.urls]
Repository = "https://github.com/chris-ritsen/network-audio-controller"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["packages/netaudio/src/netaudio"]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.8.0",
    "pynacl>=1.6.2",
    "redis>=5.0.0",
]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E402", "E501", "E713", "F401", "F541", "F602", "F811", "F821", "F841", "I001", "W291"]

[tool.ruff.format]
quote-style = "double"
